--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       .axis path {
         fill: none;
         shape-rendering: crispEdges;
-        stroke-width:15;
+        stroke-width: 2;
       }
 
       .x.axis path{
@@ -17,14 +17,27 @@
 
       .grid .tick{
         stroke: lightGrey;
-        stroke-width:10;
-        opacity: 0.7;
+        stroke-width: 1;
       }
       
-      
-      .grid path{
-        stroke-width: 0;
+
+
+
+      .x.grid path {
+        stroke: lightGrey;
+        stroke-width: 1;
       }
+
+      .y.grid path{
+        stroke: lightGrey;
+        stroke-width:1;
+      }
+
+
+
+
+
+
     </style>
   </head>
   <body>
@@ -66,7 +79,7 @@
       }
 
       svg.append("g")
-      .attr("class", "grid")
+      .attr("class", "x grid")
       //String concatenation
       .attr("transform", "translate(0," + (height - margins.bottom) + ")")
       .call(xGrid()
@@ -75,7 +88,7 @@
                 );
 
         svg.append("g")
-        .attr("class", "grid")
+        .attr("class", "y grid")
         .attr("transform", "translate(" + (margins.left) + ",0)")
             .call(yGrid()
                 .tickSize(-width, 0)
