Added a strokeWidth variable and used it to calculate the translations so the axes do not protrude each other

--- a/NonProtrudingGraph.html
+++ b/NonProtrudingGraph.html
@@ -99,7 +99,7 @@
 
         svg.append("g")
         .attr("class", "y grid")
-        .attr("transform", "translate(" + (margins.left + (axisStrokeWidth/2.0)) + "," +(1.5) + ")")
+        .attr("transform", "translate(" + (margins.left + (axisStrokeWidth/2.0)) + "," +(axisStrokeWidth/2.0) + ")")
         .call(setYGrid()
         .tickSize(-width, 0)
         .tickFormat(""));
