Changed back translations

--- a/NonProtrudingGraph.html
+++ b/NonProtrudingGraph.html
@@ -99,7 +99,7 @@
 
         svg.append("g")
         .attr("class", "y grid")
-        .attr("transform", "translate(" + (margins.left + (axisStrokeWidth/2.0)) + "," +(axisStrokeWidth/2.0) + ")")
+        .attr("transform", "translate(" + (margins.left) + ",0)")
         .call(setYGrid()
         .tickSize(-width, 0)
         .tickFormat(""));
@@ -126,7 +126,7 @@
         svg.append("g")
         .attr("class", "y axis")
         .style("stroke-width", axisStrokeWidth)
-        .attr("transform", "translate(" + (margins.left + (axisStrokeWidth/2.0)) + "," +(1.5) + ")")
+        .attr("transform", "translate(" + (margins.left) + ",0)")
         .call(setYAxis());
       } 
     </script>
